--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   "devDependencies": {
     "apollo-boost": "^0.4.8",
     "graphql": "^15.0.0",
-    "react-apollo": "^3.1.5"
+    "react-apollo": "^3.1.5",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2"
   }
 }
