--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "apollo-boost": "^0.4.8",
+    "apollo-link-context": "^1.0.20",
     "graphql": "^15.0.0",
     "react-apollo": "^3.1.5",
     "react-router": "^5.1.2",
